--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,6 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -23,5 +21,5 @@ body {
 }
 
 pre {
-  font-family: monospace;
+  font-family: 'Intel One Mono', monospace;
 }
