feat: ping every 5 minutes (for health check)

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
 }
 
 pre {
-  font-family: 'Intel One Mono', monospace;
+  font-family: 'Source Code Pro', monospace;
 }
 
 ::-webkit-scrollbar {
