feat: llm integration for error resolution

--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,9 @@ body {
   margin: 0rem;
 }
 
-pre {
+pre, code {
   font-family: 'Source Code Pro', monospace;
+  text-wrap: wrap;
 }
 
 ::-webkit-scrollbar {
