fix: minor css changes

--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,9 @@
   ::-webkit-scrollbar-thumb:hover {
     @apply bg-foreground/20;
   }
+  h1, h2, h3, h4, h5, h6 {
+    @apply py-2
+  }
   p + pre {
     @apply pt-2;
   }  
